# wasm-on-mcu

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
tests/: integration.rs
testsuite/: Cargo.toml
testsuite/tests/: test.rs
