[package]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
name = "wasmi-m4"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
harness = false
name = "integration"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
wasmi = { version = "0.22.0", default-features = false }

[dependencies.stm32f4xx-hal]
features = ["stm32f411"]
version = "0.14.0"

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3
overflow-checks = false
